[package]
name = "ramaui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_6"] }
xml-rs = "0.8.20"
syn = "2.0.60"
quote = "1.0.36"

[lib]
proc-macro = true
